Final Commit - fixed the gaps and margins for the fieldset and labels

--- a/contact-abc/css/styles.css
+++ b/contact-abc/css/styles.css
@@ -57,6 +57,7 @@ form input:not(input[type="submit"], input[type="radio"]) {
 form fieldset {
     border: none;
     padding: 0;
+    margin-bottom: 2rem;
 }
 
 form fieldset div label {
@@ -64,7 +65,6 @@ form fieldset div label {
     align-items: center;
     justify-content: center;
     column-gap: 1rem;
-    margin-bottom: 1.5rem;
     padding: 1rem 1rem;
     border: 1px solid var(--form-field-outilne);
     border-radius: .5rem;
@@ -124,6 +124,7 @@ fieldset div {
     display: flex;
     flex-wrap: wrap;
     column-gap: 1rem;
+    row-gap: 1rem;
     justify-content: center;
 }
 
